# sonic-otn-libs-molex

platform/: build.sh
platform/HalPackage/: CMakeLists.txt
platform/HalPlatformApiServer/: CMakeLists.txt
platform/OtnVirtualHal/: CMakeLists.txt  otn_alarm_catalog.cpp  otn_alarm_catalog.h  otn_vhal.cpp
sai/: CMakeLists.txt  HAL_EVENT.md
sai/alarm/: HAL_EVENT.md  gen_alarm_table.py  gen_default_json.py  otn_alarm_catalog.json
sai/inc/: dev_data.h  hal_event.h  hal_event_listener.h  otdr_static_config.h  otn_threshold_config.h  sai_adapter.h  sai_adapter_interface.h  sai_meta_data.h  virtual_otn_dev_mgr.h  virtual_otn_device.h
sai/src/: dev_util.cpp  hal_event_listener.cpp  otdr_static_config.cpp  otn_threshold_config.cpp  sai.c  sai_adapter.cpp  sai_adapter_interface.cpp  sai_otn_attenuator.cpp  sai_otn_device.cpp  sai_otn_oa.cpp  sai_otn_ocm.cpp  sai_otn_osc.cpp  sai_otn_otdr.cpp  sai_otn_otdr_scan_type.cpp  sai_otn_wss.cpp  sai_switch.cpp  virtual_otn_dev_mgr.cpp  virtual_otn_device.cpp
sai/test/: hal_event_generator.cpp
